php_mysql_dockerfiles/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
