php_mysql_dockerfiles/k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql
spec:
  type: ClusterIP
  selector:
    component: mysql
  ports:
    - port: 3306
      targetPort: 3306
